# tictactoe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  foo.c  run.sh  saveMain.c  tictactoe
src/: board.c  board.h  color.c  color.h  errHandler.c  errHandler.h  input.c  input.h  main.c  utils.h
src/ntr/: color.c  color.h  errHandler.c  errHandler.h  exception.h  intconver.c  intconver.h  nmath.c  nmath.h  uintconver.h  utils.c  utils.h
