cmake_minimum_required (VERSION 3.8)
# set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -ggdb -O0 -std=gnu18")
project ("tictactoe")
# file(GLOB src/*.c SOURCES)
include_directories(src src/ntr)
#set(SOURCES src/errHandler.c src/exception.h src/nmath.c src/errHandler.h src/main.c src/nmath.h src/intconver.c src/intconver.h src/utils.h src/utils.c)
file(GLOB SOURCES ${CMAKE_SOURCE_DIR} src/*.c src/ntr/*.c)
add_executable (tictactoe ${SOURCES})
#add_library(nclib SHARED ${SOURCES})
#add_library(nclibSt STATIC ${SOURCES})
